test_suite/tests/ui/remote/unknown_field.stderr
error[E0609]: no field `b` on type `&remote::S`
  --> $DIR/unknown_field.rs:12:5
   |
12 |     b: u8,
   |     ^ help: a field with a similar name exists: `a`

error[E0560]: struct `remote::S` has no field named `b`
  --> $DIR/unknown_field.rs:12:5
   |
12 |     b: u8,
   |     ^ help: a field with a similar name exists: `a`

Some errors have detailed explanations: E0560, E0609.
For more information about an error, try `rustc --explain E0560`.
